# icfpc2021-tbd

./: .gitignore  Cargo.toml  README.md  compile_times.html  tsconfig.json
.cargo/: config
git_hooks/: pre-push
public/: dashboard.html  get_fonts.sh  spec.html
public/css/: fonts.css
public/js/: spec.js
scripts/: brute_force.py  compile_times.py  get_problem.sh  iteration_health.py  runner.py
src/: banana.rs  bonus_graph.rs  bruteforce.rs  checker.rs  daiquiri.rs  db.rs  dev_server.rs  domain_model.rs  example.rs  geom.rs  graph.rs  greedy.rs  ice.rs  main.rs  mango.rs  multishaker.rs  planner.rs  poses_live.rs  prelude.rs  rail.rs  rail_constrained.rs  random.rs  rle.rs  rotate.rs  scratch_manpages.rs  shake.rs  solver.rs  springs.rs  submitter.rs  summary.rs  threshold.rs  util.rs
src/scratches/: mod.rs
src/scratches/julie/: mod.rs
src/scratches/julie/life/: life_server.rs  life_server_simple.rs  mod.rs
src/scratches/julie/life/static/: 404.html  life.html  lifescript.ts
src/scratches/julie/viz/: mod.rs
src/scratches/julie/viz/static/: viz.html  viz.ts
src/scratches/pavel/: linear_constraints_example.rs  mod.rs  quadratic_constraints_example.rs  simulated_annealing.rs
src/scratches/vlad/: mod.rs  sse.html
src/viz/: mod.rs
src/viz/static/: assert.ts  spec.ts  static - Ярлык.lnk  types.ts  viz.html  viz.ts
