[package]
name = "icfpc2021-tbd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
simple-server = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
